--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="flex-column">
+        <div class="flex-column" id= "quiz">
             <h1>Code Quiz</h1>
             <button id="btn" class="play">Play</button>
             <button id ="btn" class="score">Highscore<i class="fas fa-crown"></i></button>
+         </div>
+        <div class= "hide" id= "questions">
+            <h2 id="countdown"></h2>
+            <p id= "questiontext"></p>
+            <div id = "choices"></div>
         </div>
+        
     </div>
     
     <script src="./script.js"></script>
