--- a/index.html
+++ b/index.html
@@ -12,25 +12,13 @@
 
 <body>
     <div class="container">
-        <div class="flex-column" id="quiz">
+        <div id="quiz" class="flex-column">
             <h1>Code Quiz</h1>
-            <button id="btn" class="play">Play</button>
-            <button id="btn" class="score">Highscore<i class="fas fa-crown"></i></button>
+            <a href="./game.html" class="btn" id="play">Play</a>
+            <a href="/highscore.html" id="high-btn" class="btn">
+            Highscore<i class="fas fa-crown"></i></a>
         </div>
-        <div class="hide" id="questions"> </div>
-        <div id="choices">
-            <div class="choice" id="A" onclick="checkAnswer('A')"> </div>
-            <div class="choice" id="B" onclick="checkAnswer('B')"></div>
-            <div class="choice" id="C" onclick="checkAnswer('C')"></div>
-            
-        </div>
-        <h3 id="countdown"></h3>
-        <div id ="progress"></div>
     </div>
-    </div>
-    </div>
-
-    <script src="./script.js"></script>
 </body>
 
 </html>
