--- a/game.html
+++ b/game.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,34 +8,31 @@
     <title>Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div id="game" class="flex-column">
             <div id="display" class=display-bar>
-             <div class= "timer">
+                <div class="timer">
+                </div>
+                <div class="display-">
+                    <p class="score-num">
+                        Seconds Remaining
+                    </p>
+                    <h1 class="display-text" id="score">0</h1>
+                </div>
             </div>
-             <div class="display-">
-                 <p class="score-num">
-                     Score
-                 </p>
-                 <h1 class="display-text" id="score">0</h1>
-             </div>
+            <div class="questionContainer">
+
+
+
             </div>
-            <h1 id="question"></h1>
-            <div class="choice-container">
-               <button class="btn">A</button>
-                <p class= "choice-text" data-number="1"></p>
-            </div>
-            <div class="choice-container">
-            <button class="btn">B</button>
-                <p class= "choice-text" data-number="2"></p>
-            </div>
-            <div class="choice-container">
-                <button class="btn">C</button>
-                <p class= "choice-text" data-number="3"></p>
+            <div class="errorMessage">
+                
             </div>
         </div>
-    </div>
-    <script src="script.js"></script>
+        <script src="script.js"></script>
+
 </body>
+
 </html>
