--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <div id="quiz" class="flex-column">
             <h1>Code Quiz</h1>
             <a href="./game.html" class="btn" id="play">Play</a>
-            <a href="/highscore.html" id="high-btn" class="btn">
+            <a href="highscore.html" id="high-btn" class="btn">
             Highscore<i class="fas fa-crown"></i></a>
         </div>
+        
     </div>
 </body>
 
